# PackageKit

./: .cirrus.yml  .editorconfig  .gitignore  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING  ChangeLog  CodingStyle  HACKING  Makefile.am  NEWS  PackageKit.conf.in  PackageKit.doap  README  README.md  README.transifex  RELEASE  TODO  acinclude.m4  autogen.sh  configure.ac  meson.build  meson_options.txt  moc.mk  packagekit.pc.in  waf  waf-light  wscript
backends/: .gitignore  BACKENDS  MAINTAINERS.md  Makefile.am  PORTING.txt  meson.build  test-backend.sh  wscript  wscript_build
client/: .gitignore  Makefile.am  README  egg-debug.c  egg-debug.h  egg-string.c  egg-string.h  egg-test.c  egg-test.h  meson.build  pk-application-main.c  pk-application.c  pk-application.desktop  pk-application.glade  pk-application.h  pk-client-sync.c  pk-client-sync.h  pk-connection.h  pk-console-main.c  pk-console-shared.c  pk-console-shared.h  pk-console-test.c  pk-console.c  pk-console.h  pk-generate-pack-main.c  pk-generate-pack-test.c  pk-generate-pack.c  pk-generate-pack.h  pk-generate-package-list.c  pk-import-common.c  pk-import-common.h  pk-import-desktop.c  pk-import-specspo.c  pk-job-list.c  pk-marshal.list  pk-monitor.c  pk-notify.c  pk-notify.h  pk-offline-update.c  pk-polkit-client.c  (+44 more)
contrib/: Makefile.am  PackageKit.catalog  PackageKit.spec.in  generate-md-archive.sh  gnome-packagekit.catalog  gnome-packagekit.spec.in  meson.build  packagekit-bugreport.sh  pk-completion.bash  pk-plugin-external.c  pkcon  pkgcli  pkgctl  update-linguas.sh  wscript_build
data/: .gitignore  20packagekit  95packagekit  Makefile.am  meson.build  org.freedesktop.PackageKit.conf.in  org.freedesktop.PackageKit.service.in  org.freedesktop.PackageKit.yumBackend.conf.in  org.freedesktop.PackageKit.yumBackend.service.in  org.freedesktop.PackageKitAptBackend.conf.in  org.freedesktop.PackageKitAptBackend.service.in  org.freedesktop.PackageKitTestBackend.conf.in  org.freedesktop.PackageKitTestBackend.service.in  org.freedesktop.PackageKitYumBackend.conf.in  org.freedesktop.PackageKitYumBackend.service.in  org.freedesktop.packagekit.metainfo.xml  packagekit-background  packagekit-background.cron  packagekit-catalog.xml.in  packagekit-offline-update.service.in  packagekit-pack.xml.in  packagekit-package-list.xml.in  packagekit-qt.pc.in  packagekit-servicepack.xml.in  packagekit.pc.in  packagekit.service.in  packages.db  pk-upgrade-distro.sh  transactions.db  wscript_build
docs/: .gitignore  Makefile.am  app-install-v1.draft  backends.xml  config.xsl  example.catalog  introduction.xml  media-repo.txt  meson.build  migration-glib-to-glib2.txt  offline-updates.txt  pk-backends.xml  pk-introduction.xml  planned-api-changes.txt  provides-component-naming.txt  reference.xml  security.txt  setting-the-proxy.txt  upload.sh  wscript_build
etc/: .gitignore  Makefile.am  PackageKit.conf  PackageKit.conf.in  README  Vendor.conf  Vendor.conf.in  meson.build  wscript_build
helpers/: .gitignore  BACKENDS  Makefile.am  README  box-refresh-cache.sh  conary-description.py  conary-get-updates.py  conary-install.py  conary-refresh-cache.py  conary-search-details.py  conary-search-name-live.py  conary-search-name.py  conaryBackend.py  dependency-solving-helper.cpp  meson.build  packagekit.py  test-backend.sh  yum-description.py  yum-get-deps.py  yum-get-description.py  yum-get-updates.py  yum-install.py  yum-refresh-cache.py  yum-remove.py  yum-search-details.py  yum-search-group.py  yum-search-name.py  yum-search-simple.py  yum-update-system.py  yum-update.py  yumBackend.py
libgbus/: .gitignore  Makefile.am  libgbus-marshal.list  libgbus.c  libgbus.h  wscript_build
libpackagekit/: .gitignore  Makefile.am  README  egg-dbus-monitor.c  egg-dbus-monitor.h  egg-debug.c  egg-debug.h  egg-obj-list.c  egg-obj-list.h  egg-string.c  egg-string.h  egg-test.c  egg-test.h  pk-action-list.c  pk-action-list.h  pk-bitfield.c  pk-bitfield.h  pk-catalog.c  pk-catalog.h  pk-category-obj.c  pk-category-obj.h  pk-client.c  pk-client.h  pk-common.c  pk-common.h  pk-connection.c  pk-connection.h  pk-control.c  pk-control.h  pk-dbus-monitor.c  pk-dbus-monitor.h  pk-debug.c  pk-debug.h  pk-details-obj.c  pk-details-obj.h  pk-details.c  pk-details.h  pk-distro-upgrade-obj.c  pk-distro-upgrade-obj.h  pk-enum-list.c  (+49 more)
libpkextra/: Makefile.am  pk-extra.h  pk-self-test.c
libselftest/: .gitignore  Makefile.am  libselftest.c  libselftest.h  wscript_build
man/: .gitignore  Makefile.am  pkcon.sgml  pkcon.xml  pkgenpack.xml  pkmon.sgml  pkmon.xml  wscript_build
po/: .gitignore  LINGUAS  POTFILES.in  POTFILES.skip  PackageKit.pot  af.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bg_BG.po  bn_IN.po  br.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fa_IR.po  fi.po  fo.po  foo.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  (+49 more)
policy/: .gitignore  Makefile.am  meson.build  org.freedesktop.packagekit.policy  org.freedesktop.packagekit.policy.in  org.freedesktop.packagekit.rules  packagekit.policy  wscript_build
src/: .gitignore  Makefile.am  callgrind.sh  contents.cpp  contents.h  egg-dbus-monitor.c  egg-dbus-monitor.h  egg-debug.c  egg-debug.h  egg-obj-list.c  egg-obj-list.h  egg-string-list.c  egg-string-list.h  egg-string.c  egg-string.h  egg-test.c  egg-test.h  gdb.sh  meson.build  org.freedesktop.PackageKit.Backend.xml  org.freedesktop.PackageKit.Transaction.xml  org.freedesktop.PackageKit.xml  packagekit-plugin.h  packagekit-plugin.pc.in  packagekit.gresource.xml  pk-backend-dbus.c  pk-backend-dbus.h  pk-backend-internal.h  pk-backend-job.c  pk-backend-job.h  pk-backend-python.c  pk-backend-python.h  pk-backend-spawn.c  pk-backend-spawn.h  pk-backend-thread.c  pk-backend-thread.h  pk-backend.c  pk-backend.h  pk-cache.c  pk-cache.h  (+125 more)
tests/: meson.build  pk-test-daemon-internal.c  pk-test-e2e.c  pk-test-library.c  run-daemon-test.py
tools/: .gitignore  Makefile.am  add-error-enum.sh  add-method.sh  backend-change.sh  create-coverage-report.sh  mugshot.sh  pkt  pkt.py  (+6 more)
(+1420 files in other folders)
